# oceanbios

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  link.ld  ocmos.cfg
.github/workflows/: build.yml
src/: bios.s  component.c  crt0.s  interrupt.c  main.c  terminal.c
src/asm/: crt0.s
src/include/: component.h  terminal.h
